<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:background="@drawable/rectangle_border_radius_3dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="15dp"
            android:layout_height="28dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_phone" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            android:background="@color/line_light_blue_color" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="215dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/user_name"
            android:textColor="@color/font_color_light_blue"
            android:textSize="@dimen/font_size_15sp" />
    </LinearLayout>

    //注册页面邮箱暂时不用
    <!--<LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_border_radius_3dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="16.85dp"
            android:layout_height="12.1dp"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="18dp"
            android:src="@mipmap/ic_email" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="9dp"
            android:background="@color/line_light_blue_color" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="215dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/email"
            android:textColor="@color/font_color_light_blue"
            android:textSize="@dimen/font_size_15sp" />
    </LinearLayout>-->


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_border_radius_4dp">

            <EditText
                android:id="@+id/email_ic_editText"
                android:layout_width="148dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/email_identifying_code"
                android:textColor="@color/font_color_light_blue"
                android:textSize="@dimen/font_size_15sp" />
        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/send_ic_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/rectangle_button_style"
            android:text="@string/send_identifying_code"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_border_radius_3dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="15.75dp"
            android:layout_height="20.2dp"
            android:layout_marginBottom="13.5dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="13dp"
            android:src="@mipmap/ic_psw" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20.25dp"
            android:layout_marginTop="9dp"
            android:background="@color/line_light_blue_color" />

        <EditText
            android:id="@+id/student_number_editText"
            android:layout_width="222dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/student_number"
            android:inputType="textPassword"
            android:textColor="@color/font_color_light_blue"
            android:textSize="@dimen/font_size_15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_border_radius_3dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="15.75dp"
            android:layout_height="20.2dp"
            android:layout_marginBottom="13.5dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="13dp"
            android:src="@mipmap/ic_psw" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20.25dp"
            android:layout_marginTop="9dp"
            android:background="@color/line_light_blue_color" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="222dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/font_color_light_blue"
            android:textSize="@dimen/font_size_15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_border_radius_3dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="15.75dp"
            android:layout_height="20.2dp"
            android:layout_marginBottom="13.5dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="13dp"
            android:src="@mipmap/ic_psw" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20.25dp"
            android:layout_marginTop="9dp"
            android:background="@color/line_light_blue_color" />

        <EditText
            android:id="@+id/password_again_editText"
            android:layout_width="222dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/password_again"
            android:textColor="@color/font_color_light_blue"
            android:textSize="@dimen/font_size_15sp"
            android:inputType="textPassword"/>

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="47dp"
        android:background="@drawable/rectangle_button_style"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_17sp" />

</LinearLayout>